--- a/frontend/style.css
+++ b/frontend/style.css
@@ -288,7 +288,7 @@ li a.active {
     right: -250px;
     background-color: #1f1f1f;
     padding: 0.5rem;
-    border-radius: 0 0 8px 8px;
+    border-radius: 8px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6);
     width: 150px;
     transition: right 0.3s ease-in-out;
