--- a/frontend/style.css
+++ b/frontend/style.css
@@ -39,6 +39,7 @@ body {
   flex: 1;
   display: flex;
   align-items: center;
+  
 }
 
 .nav-left {
@@ -55,6 +56,7 @@ body {
 
 .logo {
   width: 100px;
+  margin-left: -15px;
 }
 
 /* NAV QUOTE */
