--- a/frontend/style.css
+++ b/frontend/style.css
@@ -212,9 +212,9 @@ li a.active {
 /* MEDIA QUERIES – MOBILE */
 @media (max-width: 768px)  {
   #ai-chatbox-wrapper {
-    display: none !important;
+    display: none;
   }
-}
+
 
 
   .nav-container {
@@ -313,5 +313,4 @@ li a.active {
     display: none !important;
   }
 
- 
 }
