--- a/frontend/style.css
+++ b/frontend/style.css
@@ -215,7 +215,7 @@ li a.active {
     object-fit: contain;
     background-color: black;
   }
-}
+}f
 
 /* MEDIA QUERIES – MOBILE */
 @media (max-width: 768px)  {
